# E-Commerce-Customers

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_analysis.py  in-jupyter-notebook-case-study.ipynb
src/: evaluate.py
src/ecommerce_customers/: data_loader.py  train.py  visualisation.py
